<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.ntnu.idi.idatt2003</groupId>
  <artifactId>millions</artifactId>
  <version>1.0-SNAPSHOT</version>

    <name>Millions Stock Trading Game</name>
    <description>A stock trading game portfolio project</description>
    <!-- FIXME change it to the project's website -->
    <url>http://www.example.com</url>

    <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <javafx.version>23.0.1</javafx.version>
        <junit.version>5.11.0</junit.version>
  </properties>

  <dependencies>
      <!-- JavaFX Controls -->
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>${javafx.version}</version>
      </dependency>
      <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>${javafx.version}</version>
      </dependency>

      <!-- JUnit Jupiter for Testing -->
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter</artifactId>
          <version>${junit.version}</version>
          <scope>test</scope>
      </dependency>
  </dependencies>

  <build>
      <plugins>
          <!-- Maven Compiler Plugin -->
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.14.1</version>
              <configuration>
                  <release>${maven.compiler.release}</release>
              </configuration>
          </plugin>

          <!-- Maven Surefire Plugin (for running tests) -->
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.5.4</version>
          </plugin>

          <!-- JavaFX Maven Plugin -->
          <plugin>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-maven-plugin</artifactId>
              <version>0.0.8</version>
              <configuration>
                  <mainClass>edu.ntnu.idi.idatt2003.MainApp</mainClass>
              </configuration>
          </plugin>

          <!-- Maven JavaDoc Plugin -->
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>3.12.0</version>
          </plugin>
      </plugins>
  </build>
</project>
